; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/ipset/extr_ip_set_hash_netport.c_hash_netport4_do_data_match.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/ipset/extr_ip_set_hash_netport.c_hash_netport4_do_data_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_netport4_elem = type { i64 }

@ENOTEMPTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hash_netport4_elem*)* @hash_netport4_do_data_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hash_netport4_do_data_match(%struct.hash_netport4_elem* %0) #0 {
  %2 = alloca %struct.hash_netport4_elem*, align 8
  store %struct.hash_netport4_elem* %0, %struct.hash_netport4_elem** %2, align 8
  %3 = load %struct.hash_netport4_elem*, %struct.hash_netport4_elem** %2, align 8
  %4 = getelementptr inbounds %struct.hash_netport4_elem, %struct.hash_netport4_elem* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @ENOTEMPTY, align 4
  %9 = sub nsw i32 0, %8
  br label %11

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %10, %7
  %12 = phi i32 [ %9, %7 ], [ 1, %10 ]
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
